--- a/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Base.lproj/Main.storyboard
@@ -457,6 +457,7 @@
                         <outlet property="userImg" destination="NKB-YH-6P3" id="0w2-8a-mmf"/>
                         <outlet property="usernameTxt" destination="V14-1k-Bj3" id="SCm-VI-w8N"/>
                         <segue destination="aWU-Hz-tfp" kind="unwind" identifier="unwindToChannel" unwindAction="prepareForUnwindWithSegue:" id="3fs-6D-Zfw"/>
+                        <segue destination="uGa-6T-Bim" kind="show" identifier="toAvatarPicker" id="Kc2-jg-q5l"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gij-ZU-ycO" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -464,12 +465,90 @@
             </objects>
             <point key="canvasLocation" x="2404" y="-37.331334332833585"/>
         </scene>
+        <!--Avatar PickerVC-->
+        <scene sceneID="wpW-l7-IBs">
+            <objects>
+                <viewController id="uGa-6T-Bim" customClass="AvatarPickerVC" customModule="Smack" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="DFh-TI-sUB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k2f-Qe-L9z">
+                                <rect key="frame" x="5" y="30" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="0aD-g5-dgx"/>
+                                    <constraint firstAttribute="width" constant="30" id="bUa-o6-DjU"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="smackBack"/>
+                            </button>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="4FP-d7-Ha5">
+                                <rect key="frame" x="107.5" y="30" width="160" height="29"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="160" id="Kam-xE-sBw"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="Dark"/>
+                                    <segment title="Light"/>
+                                </segments>
+                                <color key="tintColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                            </segmentedControl>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CxQ-uJ-xDd">
+                                <rect key="frame" x="0.0" y="70" width="375" height="597"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="NxW-wN-hOb">
+                                    <size key="itemSize" width="100" height="100"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="whN-Fo-SyZ">
+                                        <rect key="frame" x="20" y="0.0" width="100" height="100"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eJa-OL-kFs">
+                                                    <rect key="frame" x="5" y="5" width="90" height="90"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="eJa-OL-kFs" secondAttribute="bottom" constant="5" id="DKf-u1-Hrp"/>
+                                            <constraint firstItem="eJa-OL-kFs" firstAttribute="leading" secondItem="whN-Fo-SyZ" secondAttribute="leading" constant="5" id="Iyk-0P-dub"/>
+                                            <constraint firstAttribute="trailing" secondItem="eJa-OL-kFs" secondAttribute="trailing" constant="5" id="XSu-On-1ie"/>
+                                            <constraint firstItem="eJa-OL-kFs" firstAttribute="top" secondItem="whN-Fo-SyZ" secondAttribute="top" constant="5" id="Ywx-5V-LXf"/>
+                                        </constraints>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="CxQ-uJ-xDd" firstAttribute="top" secondItem="k2f-Qe-L9z" secondAttribute="bottom" constant="10" id="0OJ-Ut-GV9"/>
+                            <constraint firstItem="k2f-Qe-L9z" firstAttribute="leading" secondItem="0ap-hU-DOP" secondAttribute="leading" constant="5" id="QpH-Ix-lm0"/>
+                            <constraint firstItem="4FP-d7-Ha5" firstAttribute="top" secondItem="0ap-hU-DOP" secondAttribute="top" constant="10" id="csb-fy-oSC"/>
+                            <constraint firstItem="k2f-Qe-L9z" firstAttribute="top" secondItem="0ap-hU-DOP" secondAttribute="top" constant="10" id="g6o-sZ-Bld"/>
+                            <constraint firstItem="0ap-hU-DOP" firstAttribute="trailing" secondItem="CxQ-uJ-xDd" secondAttribute="trailing" id="iQt-0z-UNl"/>
+                            <constraint firstItem="4FP-d7-Ha5" firstAttribute="centerX" secondItem="DFh-TI-sUB" secondAttribute="centerX" id="iWr-HO-l4E"/>
+                            <constraint firstItem="CxQ-uJ-xDd" firstAttribute="leading" secondItem="0ap-hU-DOP" secondAttribute="leading" id="p6T-ti-7sy"/>
+                            <constraint firstItem="0ap-hU-DOP" firstAttribute="bottom" secondItem="CxQ-uJ-xDd" secondAttribute="bottom" id="zGB-la-wgg"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="0ap-hU-DOP"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fXR-4b-j2t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3080.8000000000002" y="-31.03448275862069"/>
+        </scene>
     </scenes>
     <resources>
         <image name="addChannelButton" width="22" height="22"/>
         <image name="closeButton" width="28" height="28"/>
         <image name="menuProfileIcon" width="99" height="99"/>
         <image name="profileDefault" width="192" height="192"/>
+        <image name="smackBack" width="28" height="28"/>
         <image name="smackBurger" width="40" height="40"/>
         <image name="smackLogo" width="48" height="40"/>
     </resources>
