--- a/Smack/Base.lproj/Main.storyboard
+++ b/Smack/Base.lproj/Main.storyboard
@@ -480,6 +480,9 @@
                                     <constraint firstAttribute="width" constant="30" id="bUa-o6-DjU"/>
                                 </constraints>
                                 <state key="normal" title="Button" image="smackBack"/>
+                                <connections>
+                                    <action selector="backPressed:" destination="uGa-6T-Bim" eventType="touchUpInside" id="JgE-MT-Au9"/>
+                                </connections>
                             </button>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="4FP-d7-Ha5">
                                 <rect key="frame" x="107.5" y="30" width="160" height="29"/>
@@ -491,6 +494,9 @@
                                     <segment title="Light"/>
                                 </segments>
                                 <color key="tintColor" red="0.35686274509999999" green="0.62352941179999999" blue="0.79607843140000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <connections>
+                                    <action selector="segmentControlChanged:" destination="uGa-6T-Bim" eventType="valueChanged" id="iB8-Aa-amJ"/>
+                                </connections>
                             </segmentedControl>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="CxQ-uJ-xDd">
                                 <rect key="frame" x="0.0" y="70" width="375" height="597"/>
@@ -502,7 +508,7 @@
                                     <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="whN-Fo-SyZ">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="avatarCell" id="whN-Fo-SyZ" customClass="AvatarCell" customModule="Smack" customModuleProvider="target">
                                         <rect key="frame" x="20" y="0.0" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -520,6 +526,9 @@
                                             <constraint firstAttribute="trailing" secondItem="eJa-OL-kFs" secondAttribute="trailing" constant="5" id="XSu-On-1ie"/>
                                             <constraint firstItem="eJa-OL-kFs" firstAttribute="top" secondItem="whN-Fo-SyZ" secondAttribute="top" constant="5" id="Ywx-5V-LXf"/>
                                         </constraints>
+                                        <connections>
+                                            <outlet property="avatarImg" destination="eJa-OL-kFs" id="ggE-56-4gR"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -537,6 +546,10 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="0ap-hU-DOP"/>
                     </view>
+                    <connections>
+                        <outlet property="collectionView" destination="CxQ-uJ-xDd" id="As7-WV-GWV"/>
+                        <outlet property="segmentControl" destination="4FP-d7-Ha5" id="wr2-PP-gue"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fXR-4b-j2t" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
